--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -9,14 +9,33 @@
   font-family: $main-font;
   line-height: 15px;
   color: #ffffff;
+  &--area {
+    grid-area: buy;
+  }
+  @media (min-width: 480px) {
+    justify-self: end;
+    margin-right: 20px;
+  }
+  &:hover {
+    background: #ffffff;
+    border: 1px solid #8d81ac;
+    color: #8d81ac;
+    cursor: pointer;
+  }
 }
 
 .burger {
   display: flex;
+  justify-content: flex-end;
   background: #27262a;
   border: none;
   position: relative;
   margin-right: 15px;
+
+  &--area {
+    grid-area: burger;
+  }
+
   &__line {
     width: 26px;
     height: 3px;
@@ -62,4 +81,20 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 20px;
+
+  @media (min-width: 481px) {
+    left: calc(50% - 195px);
+    bottom: -31px;
+    width: 390px;
+    height: 62px;
+    font-size: 21px;
+    line-height: 22px;
+  }
+
+  &:hover {
+    background: #ffffff;
+    border: 2px solid #8d81ac;
+    color: #8d81ac;
+    cursor: pointer;
+  }
 }
