--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,25 @@
 $main-font: Montserrat, sans-serif;
 $optional-font: Lato, sans-serif;
+
+
+// bred
+
+$white-text: #fff;
+$btn-bg:#8e82ae;
+$header-bg:#262626;
+$grey-text:#848e97;
+$menu-bg:#303030;
+$black-color: #323232;
+
+
+$color-text-violet:#8d81ac;
+$color-text-black: #333333;
+$white-text: #fff;
+$grey-text: #848e97;
+$color-text-violet: #8d81ac;
+$color-text-black: #333333;
+
+$landscape-mobile-normal: 401px;
+$landscape-tablet: 993px;
+$landscape-mobile-big: 481px;
+$font-family: 'Montserrat', sans-serif;
