--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,7 @@
 @import "./reset";
 @import "./variables";
 @import "./mixins";
+@import "./buttons";
 @import "./header";
 @import "./main";
-@import "./buttons"
+@import "./reviews";
